1999-09-02  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/providers/maildir: Added (experimental) maildir 
	provider written by Jukka Zitting <hukka@greywolves.org>
	
	* camel/providers/Makefile.am (SUBDIRS): build maildir
	provider.

	* camel/camel-provider.c (camel_provider_get_for_protocol):
	bug fix. patch from  Jukka Zitting <hukka@greywolves.org>

	* camel/camel-mime-message.c (_write_one_recipient_to_stream): 
	changed decl to fit CRLFunc. 
	(_write_recipients_to_stream): 
	calls camel_recipient_foreach_recipient_type now.

	* camel/camel-recipient.c (camel_recipient_foreach_recipient_type): 
	new convinience function. Iterate over all recipient types.

	* camel/gmime-utils.c (gmime_write_header_table_to_stream): 
	s/write_header_table_to_stream/gmime_write_header_table_to_stream/
	(gmime_write_header_with_glist_to_stream): 
	s/write_header_with_glist_to_stream/gmime_write_header_with_glist_to_stream/

1999-09-01  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/camel-mime-message.c (_finalize): 
	(_add_recipient): 
	(_remove_recipient): 
	(_get_recipients): now use CamelRecipientTable
	
	* camel/gmime-content-field.c: 
	(gmime_content_field_unref): test if object 
	to free is non void.

	* camel/camel-folder.c (_finalize): 
	(_set_name): 
	* camel/camel-mime-part.c (_finalize): 
	(_set_description): 
	(_set_disposition): 
	* camel/camel-service.c (_finalize): 
	* camel/camel-stream-fs.c (_finalize): 
	* camel/gmime-content-field.c: 
	(gmime_content_field_construct_from_string): 

	* camel/url-util.c (g_url_free): 

	When using g_free (obj) don't test if obj != NULL
	g_free () already do that. Thanks to elerium for
	the feedback.

1999-08-30  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/camel-recipient.c (camel_recipient_get): 
	(camel_recipient_remove): 
	(camel_recipient_add): 
	new func. More work on new independant recipient code. 

1999-08-29  bertrand  <Bertrand.Guiheneuf@aful.org>

	* MAINTAINERS: updated my e-mail address. 
