@@ -15,6 +15,19 @@ CAMEL_DATA_WRAPPER_CLASS
 </SECTION>
 
 <SECTION>
+<FILE>camel-recipient</FILE>
+CamelRecipientTable
+<TITLE>CamelRecipientTable</TITLE>
+camel_recipient_table_new
+camel_recipient_table_get
+camel_recipient_table_add
+camel_recipient_table_add_list
+camel_recipient_table_remove
+camel_recipient_table_ref
+camel_recipient_table_unref
+</SECTION>
+
+<SECTION>
 <FILE>camel-mime-part</FILE>
 CamelMimePart
 <TITLE>CamelMimePart</TITLE>
